--- a/src/app/exec/exec.component.html
+++ b/src/app/exec/exec.component.html
@@ -1,3 +1,19 @@
-<p>
-  exec works!
-</p>
+<div class="container">
+  <h1>Exec Catalogue</h1>
+  <table class="table">
+    <thead>
+    <tr>
+      <th>Title</th>
+      <th>Author</th>
+      <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let exec of execs">
+      <td>{{ exec.Name }}</td>
+      <td>{{ exec.Position }}</td>
+      <td>Show Detail</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
