--- a/src/app/menu.component.html
+++ b/src/app/menu.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="nav nav-pills">
-      <li routerLinkActive="active"> <a [routerLink]="['/exec']" >Weather</a></li>
-      <li routerLinkActive="active"> <a [routerLink]="['/event']" >Movie Details</a></li>
+      <li routerLinkActive="active"> <a [routerLink]="['/exec']" >Exec</a></li>
+      <li routerLinkActive="active"> <a [routerLink]="['/event']" >Event</a></li>
     </ul>
   </div>
 </div>
