added icon and changed a little bit the exec file

--- a/src/app/exec/exec.component.html
+++ b/src/app/exec/exec.component.html
@@ -6,6 +6,7 @@
       <th>Title</th>
       <th>Author</th>
       <th>Action</th>
+      <th><img src="/src/favico.ico"></th>
     </tr>
     </thead>
     <tbody>
