fixed problem with img loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
   <app-welcome-page></app-welcome-page>
 </div>
 
-<div>
-  <app-about-us></app-about-us>
-</div>
+
+
+<p> hello </p>
 
 <div>
   <app-events></app-events>
@@ -25,6 +25,11 @@
 
 <div>
   <app-sponsors></app-sponsors>
+</div>
+
+
+<div>
+  <app-about-us></app-about-us>
 </div>
 
 
