--- a/src/app/execs/execs.component.html
+++ b/src/app/execs/execs.component.html
@@ -9,19 +9,11 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let exec of execs">
+    <tr *ngFor="let exec of execs" >
       <td>{{ exec.Name }}</td>
       <td>{{ exec.Position }}</td>
       <td>{{ exec.imgUrl }}</td>
-
-      <td><img
-        style="
-               border-radius: 8px;
-               max-width: 5cm;
-               height: auto;
-            "
-        src="../../assets/img/execs/Tiffany.jpg">
-      </td>
+      <img [attr.src]="exec.imgUrl">
     </tr>
     </tbody>
   </table>
