added front end for almost every component

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,3 +1,101 @@
-<p>
-  about-us wdf orks!
-</p>
+<script src="../../js/wow.min.js"></script>
+
+<!-- WEBFONT -->
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,400italic|Montserrat:700,400|Homemade+Apple' rel='stylesheet' type='text/css'>
+
+
+<!-- JQUERY -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+
+<section class="about-us" id="aboutus">
+  <div class="container">
+
+    <!-- SECTION HEADER -->
+    <div class="section-header">
+
+      <!-- SECTION TITLE -->
+      <h2 class="white-text">About US</h2>
+
+    </div>
+    <!-- / END SECTION HEADER -->
+
+    <!-- 3 COLUMNS OF ABOUT US-->
+    <div class="row">
+
+      <!-- COLUMN 1 - BIG MESSAGE ABOUT THE COMPANY-->
+      <div class="col-lg-4 col-md-4 column">
+        <div class="big-intro wow fadeInLeft animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
+          Welcome back to another year with MTSA!
+        </div>
+      </div>
+
+      <!-- COLUMN 2 - BRIEF ABOUT THE COMPANY-->
+      <div class="col-lg-4 col-md-4 column">
+        <p class="wow fadeInUp animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
+          For those of you just joining us, welcome to your new home! We hope you’re psyched about the upcoming school year with us - McGill University is such a dynamic campus, and we’re happy to be navigating it with you. We hope you’ll grow to love our community as much as we do.
+
+          We’re the McGill Taiwanese Students’ Association (MTSA), the one and only Taiwanese student community on campus. Despite this, we definitely welcome students of all cultural backgrounds to join us. We strive to create a tight-knit, vibrant, and welcoming community through amazing events that showcase our rich Taiwanese culture, create spaces for meaningful cultural dialogue, and have a ton of fun while we’re at it.
+        </p>
+      </div>
+
+      <!-- COLUMN 1 - SKILSS-->
+      <div class="col-lg-4 col-md-4 column">
+        <ul class="skills wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
+
+          <!-- SKILL ONE -->
+          <li class="skill">
+            <div class="skill-count">
+              <input type="text" value="58" data-thickness=".2" class="skill1">
+            </div>
+            <h6>Party</h6>
+          </li>
+
+          <!-- SKILL TWO -->
+          <li class="skill">
+            <div class="skill-count">
+              <input type="text" value="92" data-thickness=".2" class="skill2">
+            </div>
+            <h6>Laughter</h6>
+          </li>
+
+          <!-- SKILL THREE -->
+          <li class="skill">
+            <div class="skill-count">
+              <input type="text" value="76" data-thickness=".2" class="skill3">
+            </div>
+            <h6>Foodie</h6>
+          </li>
+
+          <!-- SKILL FOUR -->
+          <li class="skill">
+            <div class="skill-count">
+              <input type="text" value="100" data-thickness=".2" class="skill4">
+            </div>
+            <h6>Reason to love us</h6>
+
+          </li>
+
+        </ul>
+      </div> <!-- / END SKILLS COLUMN-->
+    </div> <!-- / END 3 COLUMNS OF ABOUT US-->
+
+    <!-- CLIENTS -->
+    <div class="our-clients">
+      <h5><span class="section-footer-title">OUR HAPPY CLIENTS</span></h5>
+    </div>
+    <!-- CLIENT LIST -->
+    <div class="client-list">
+      <ul class="wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
+        <li><a href="#"><img src="../../assets/img/execs/Tiffany3.jpg" alt="Client 1"></a></li>
+        <li><a href="#"><img src="../../assets/img/execs/Tiffany3.jpg" alt="Client 2"></a></li>
+        <li><a href="#"><img src="../../assets/img/execs/Tiffany3.jpg" alt="Client 3"></a></li>
+        <li><a href="#"><img src="../../assets/img/execs/Tiffany3.jpg" alt="Client 1"></a></li>
+        <li><a href="#"><img src="../../assets/img/execs/Tiffany3.jpg" alt="Client 4"></a></li>
+        <li><a href="#"><img src="../../assets/img/execs/Tiffany3.jpg" alt="Client 5"></a></li>
+        <li><a href="#"><img src="../../assets/img/execs/Tiffany3.jpg" alt="Client 6"></a></li>
+      </ul>
+    </div> <!-- / END CLIENT LIST -->
+  </div> <!-- / END CONTAINER -->
+
+</section>
