--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,3 +1,32 @@
-<p>
-  welcome-page works!
-</p>
+<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+
+<!-- Intro Header -->
+<header class="intro">
+  <div class="intro-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <h1 class="brand-heading">McGill Taiwanese Students Association</h1>
+          <p class="intro-text">
+            <i class="icon-food"></i>Eat    Laugh Love
+          </p>
+          <a href="#about" class="btn btn-circle page-scroll">
+            <i class="fa fa-angle-double-down animated"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+
+<!-- jQuery -->
+<script src="../../js/jquery.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="../../js/bootstrap.min.js"></script>
+<!-- Plugin JavaScript -->
+<script src="../../js/jquery.easing.min.js"></script>
+<!-- Custom Theme JavaScript -->
+<script src="../../js/theme.js"></script>
