--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,13 @@
-<div class="row">
-  <div class="col-xs-12">
-    <ul class="nav nav-pills">
-      <li routerLinkActive="active"> <a [routerLink]="['/about-us']" >About Us</a></li>
-      <li routerLinkActive="active"> <a [routerLink]="['/welcome-page']" >Welcome Page</a></li>
-    </ul>
-  </div>
-</div>
+<app-menu> </app-menu>
 
 <div>
   <app-welcome-page></app-welcome-page>
 </div>
 
 
-
-<p> hello </p>
+<div>
+  <app-about-us></app-about-us>
+</div>
 
 <div>
   <app-events></app-events>
@@ -27,10 +21,6 @@
   <app-sponsors></app-sponsors>
 </div>
 
-
-<div>
-  <app-about-us></app-about-us>
-</div>
 
 
 
