--- a/src/app/menu.component.html
+++ b/src/app/menu.component.html
@@ -1,8 +1,40 @@
-<div class="row">
-  <div class="col-xs-12">
-    <ul class="nav nav-pills">
-      <li routerLinkActive="active"> <a [routerLink]="['/exec']" >Exec</a></li>
-      <li routerLinkActive="active"> <a [routerLink]="['/event']" >Event</a></li>
-    </ul>
+<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+        <i class="fa fa-bars"></i>
+      </button>
+      <a class="navbar-brand page-scroll" href="index.html">
+        #mtsalovesyou </a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="portfolio-item.html">Single Project</a>
+        </li>
+        <li>
+          <a href="page-sample.html">Page Sample</a>
+        </li>
+        <li>
+          <a href="contact.html">Hire me</a>
+        </li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
   </div>
-</div>
+  <!-- /.container -->
+</nav>
+
+
+<!-- jQuery -->
+<script src="../js/jquery.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="../js/bootstrap.min.js"></script>
+<!-- Plugin JavaScript -->
+<script src="../js/jquery.easing.min.js"></script>
+<!-- Custom Theme JavaScript -->
+<script src="../js/theme.js"></script>
