--- a/src/app/menu.component.css
+++ b/src/app/menu.component.css
@@ -1,36 +1,3 @@
-/* Aries v1.0 - by WowThemes.net */
-body {
-  width:100%;
-  height:100%;
-  font-family:Open Sans,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  color:#fff;
-  background-color:#000;
-  font-weight:300;
-}
-html {
-  width:100%;
-  height:100%;
-}
-h1,h2,h3,h4,h5,h6 {
-  margin:0 0 35px;
-  text-transform:uppercase;
-  font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight:700;
-  letter-spacing:1px;
-}
-p {
-  margin:0 0 25px;
-  font-size:18px;
-  line-height:1.5;
-}
-@media(min-width:768px) {
-  p {
-    margin:0 0 35px;
-    font-size:20px;
-    line-height:1.6;
-  }
-}
-
 .navbar-custom {
   margin-bottom:0;
   border-bottom:1px solid rgba(255,255,255,.3);
@@ -63,7 +30,7 @@ p {
 }
 .navbar-custom .nav li a:hover {
   outline:0;
-  color: #ffffff;
+  color:#1ba39c;
   background-color:transparent;
 }
 .navbar-custom .nav li a:focus,.navbar-custom .nav li a:active {
@@ -96,7 +63,7 @@ p {
     background:#fff;
   }
   .navbar-custom.top-nav-collapse a {
-    color:#333;
+    color: #072e33;
     display:inline-block;
   }
 }
