--- a/src/app/welcome-page/welcome-page.component.css
+++ b/src/app/welcome-page/welcome-page.component.css
@@ -1,42 +1,8 @@
-/* Aries v1.0 - by WowThemes.net */
-body {
-  width:100%;
-  height:100%;
-  font-family:Open Sans,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  color:#fff;
-  background-color:#000;
-  font-weight:300;
-}
-html {
-  width:100%;
-  height:100%;
-}
-h1,h2,h3,h4,h5,h6 {
-  margin:0 0 35px;
-  text-transform:uppercase;
-  font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight:700;
-  letter-spacing:1px;
-}
-p {
-  margin:0 0 25px;
-  font-size:18px;
-  line-height:1.5;
-}
-@media(min-width:768px) {
-  p {
-    margin:0 0 35px;
-    font-size:20px;
-    line-height:1.6;
-  }
-}
-
-
 .intro {
   display:table;
   width:100%;
-  height:100%;
-  padding:0 0 0 0;
+  height:100vh;
+  padding:100px 0 100px 0;
   text-align:center;
   color:#fff;
   background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../../assets/img/intro-banner.png');
@@ -55,7 +21,7 @@ p {
 .intro .intro-body .intro-text {
   font-size:18px;
 }
-@media(min-width:768px) {
+@media(min-width:100%) {
   .intro {
     height:100%;
     padding:0;
@@ -82,7 +48,7 @@ p {
   line-height:40px;
   text-align:center;
   border:2px solid #fff;
-  border-radius:100%!important;
+  border-radius:100%;
   font-size:20px;
   color:#fff;
   background:0 0;
