--- a/src/app/welcome-page/welcome-page.component.css
+++ b/src/app/welcome-page/welcome-page.component.css
@@ -1,10 +1,11 @@
 .intro {
   display:table;
   width:100%;
-  height:100vh;
+  height:100%;
   padding:100px 0 100px 0;
   text-align:center;
   color:#fff;
+  font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../../assets/img/intro-banner.png');
   -webkit-background-size:cover;
   -moz-background-size:cover;
@@ -17,21 +18,23 @@
 }
 .intro .intro-body .brand-heading {
   font-size:40px;
+  font-family: "Gotham Black";
+  font-style: "light";
 }
 .intro .intro-body .intro-text {
   font-size:18px;
 }
-@media(min-width:100%) {
+
+@media(min-width: 768px){
   .intro {
-    height:100%;
     padding:0;
   }
   .intro .intro-body .brand-heading {
     font-size:60px;
     margin-top:90px;
     margin-bottom:20px;
-    border-top:2px solid #fff;
-    border-bottom:2px solid #fff;
+    /*border-top:2px solid #fff;*/
+    /*border-bottom:2px solid #fff;*/
     display:inline-block;
     padding:10px 0;
   }
@@ -47,11 +50,11 @@
   margin-top:15px;
   line-height:40px;
   text-align:center;
-  border:2px solid #fff;
-  border-radius:100%;
+  border:2px solid #ffffff;
+  border-radius:100% !important;
   font-size:20px;
-  color:#fff;
-  background:0 0;
+  color:#ffffff;
+  background:0 0 ;
   -webkit-transition:background .3s ease-in-out;
   -moz-transition:background .3s ease-in-out;
   transition:background .3s ease-in-out;
