--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,11 +1,11 @@
-<header class="intro">
+<div class="intro">
   <div class="intro-body">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h1 class="brand-heading">McGill Taiwanese Students Association</h1>
           <p class="intro-text">
-            Eat Laugh Love
+            <i class="fa fa-cutlery" aria-hidden="true"></i>Eat  <i class="fa fa-smile-o" aria-hidden="true"></i>Laugh  <i class="fa fa-heart" aria-hidden="true"></i>Love
           </p>
           <a href="#about" class="btn btn-circle page-scroll">
             <i class="fa fa-angle-double-down animated"></i>
@@ -14,4 +14,4 @@
       </div>
     </div>
   </div>
-</header>
+</div>
