--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  width:100%;
+  height:100%;
+  color:#fff;
+  background-color:#000;
+  font-weight:300;
+}
+html {
+  width:100%;
+  height:100%;
+}
+h1,h2,h3,h4,h5,h6 {
+  margin:0 0 35px;
+  text-transform:uppercase;
+  font-weight:700;
+  letter-spacing:1px;
+}
+p {
+  margin:0 0 25px;
+  font-size:18px;
+  line-height:1.5;
+}
+@media(min-width:768px) {
+  p {
+    margin:0 0 35px;
+    font-size:20px;
+    line-height:1.6;
+  }
+}
+a {
+  color:inherit;
+  -webkit-transition:all .2s ease-in-out;
+  -moz-transition:all .2s ease-in-out;
+  transition:all .2s ease-in-out;
+}
+a:hover,a:focus {
+  text-decoration:none;
+  color:inherit;
+}
+.light {
+  font-weight:400;
+}
