--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1 class="brand-heading">McGill Taiwanese Students Association</h1>
+          <h1 class="brand-heading">McGill Taiwanese Students' Association</h1>
           <p class="intro-text">
             <i class="fa fa-cutlery" aria-hidden="true"></i>Eat  <i class="fa fa-smile-o" aria-hidden="true"></i>Laugh  <i class="fa fa-heart" aria-hidden="true"></i>Love
           </p>
