added routes necessary for events and added contact-us component

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,7 +1,9 @@
 <section id="contact">
+
   <div class="container content-section">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
+        <h2><i class="fa fa-star" aria-hidden="true"></i> Contact Us</h2>
         <div class="done">
           <div class="alert alert-success">
             <button type="button" class="close" data-dismiss="alert">×</button>
