--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -25,3 +25,11 @@
   outline:0;
   outline: none;
 }
+
+h1,h2,h3,h4,h5,h6 {
+  margin:0 0 35px;
+  text-transform:uppercase;
+  font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight:700;
+  letter-spacing:1px;
+}
