--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
       <div class="col-sm-4 portfolio-item" *ngFor="let events of allEvents">
-        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+        <a href="#portfolioModal1" (click)=updateModalEvent(events) class="portfolio-link" data-toggle="modal">
           <div class="caption">
             <p> {{ events.Name }}</p>
             <div class="caption-content">
@@ -21,6 +21,7 @@
   </div>
 </section>
 
+
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
@@ -33,24 +34,14 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
-            <h2>Project Title</h2>
+            <h2 id="event-title">Project Title</h2>
             <hr class="star-primary">
             <img src="../../assets/img/intro-banner.png" class="img-responsive img-centered" alt="">
-            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-            <ul class="list-inline item-details">
-              <li>Client:
-                <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                </strong>
-              </li>
-              <li>Date:
-                <strong><a href="http://startbootstrap.com">April 2014</a>
-                </strong>
-              </li>
-              <li>Service:
-                <strong><a href="http://startbootstrap.com">Web Development</a>
-                </strong>
-              </li>
-            </ul>
+            <p id="event-description"></p>
+            Date:<p id="event-date"></p>,  Time:<p id="event-time"></p>
+            Location:<p id="event-location"></p>
+            <a class="btnghost" id="event-URL"><i class="fa fa-facebook"></i> Learn More! </a>
+            <br> <br>
             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
           </div>
         </div>
