--- a/src/app/menu.component.css
+++ b/src/app/menu.component.css
@@ -1,15 +1,40 @@
+a {
+  color:inherit;
+  -webkit-transition:all .2s ease-in-out;
+  -moz-transition:all .2s ease-in-out;
+  transition:all .2s ease-in-out;
+}
+a:hover,a:focus {
+  text-decoration:none;
+  color:inherit;
+}
+.light {
+  font-weight:400;
+}
 .navbar-custom {
   margin-bottom:0;
   border-bottom:1px solid rgba(255,255,255,.3);
   text-transform:uppercase;
   font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  background-color:#000;
+  background-color: rgba(26, 26, 26, 0.98);
 }
-.navbar-custom .navbar-brand {
+.navbar-custom .navbar-header {
   font-size:20px;
   text-transform:none;
   letter-spacing:1px;
 }
+
+.navbar-custom .navbar-header a{
+  font-size:20px;
+  text-transform:none;
+  letter-spacing:1px;
+  color: #fff;
+}
+
+.navbar-custom a:hover{
+  opacity:0.65;
+}
+
 .navbar-custom .navbar-brand:focus {
   outline:0;
 }
@@ -21,24 +46,20 @@
 .navbar-custom .navbar-brand .navbar-toggle:focus,.navbar-custom .navbar-brand .navbar-toggle:active {
   outline:0;
 }
-.navbar-custom a {
-  color:white;
-}
 
-.navbar-custom a:hover {
-  opacity: 0.65;
-}
+
 .navbar-custom .nav li a {
-  color:white;
   -webkit-transition:background .3s ease-in-out;
   -moz-transition:background .3s ease-in-out;
   transition:background .3s ease-in-out;
+  color: white;
 }
 .navbar-custom .nav li a:hover {
   outline:0;
   opacity: 0.65;
   background-color:transparent;
 }
+
 .navbar-custom .nav li a:focus,.navbar-custom .nav li a:active {
   outline:0;
   background-color:transparent;
@@ -46,12 +67,8 @@
 .navbar-custom .nav li.active {
   outline:0;
 }
-.navbar-custom .nav li.active a {
-  color: #ffffff;
-}
-.navbar-custom .nav li.active a:hover {
-  color: #ffb12f;
-}
+
+
 @media(min-width:768px) {
   .navbar-custom {
     padding:20px 0;
@@ -62,14 +79,22 @@
     -moz-transition:background .5s ease-in-out,padding .5s ease-in-out;
     transition:background .5s ease-in-out,padding .5s ease-in-out;
   }
+
   .navbar-custom.top-nav-collapse {
     padding:0;
     border-bottom:1px solid rgba(255,255,255,.3);
-    color:#333;
     background:#fff;
   }
   .navbar-custom.top-nav-collapse a {
     color:#333;
     display:inline-block;
+  }
+
+  .navbar-custom.top-nav-collapse .nav li a {
+    color: #0f0f0f;
+  }
+
+  .navbar-custom.top-nav-collapse .navbar-header a {
+    color: #0f0f0f;
   }
 }
