--- a/src/app/menu.component.html
+++ b/src/app/menu.component.html
@@ -4,7 +4,7 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
         <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand page-scroll" href="index.html">
+      <a class="navbar-brand page-scroll" href="">
         #mtsalovesyou </a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
