--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -1,3 +1,186 @@
-<p>
-  sponsors works!
-</p>
+
+<section class="sponsors" id="sponsors">
+  <div class="container color-overlay">
+
+    <!-- SECTION HEADER -->
+    <div class="section-header">
+
+      <!-- SECTION TITLE -->
+      <h2 class="dark-text">Sponsors</h2>
+    </div>
+    <!-- / END SECTION HEADER -->
+    <div id="discount-list">
+      <div id="map"></div>
+      <div class="row buttons hidden-xs hidden-sm">
+        <a href="sponsors.html" class="btn btn-primary custom-button red-btn more2">Discounts</a>
+      </div>
+    </div>
+    <p><table class="table discounts wow fadeInUp animated hidden-md hidden-lg" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
+    <tr>
+      <td>Basak</td>
+      <td class="hidden-xs">1237 rue Guy, Montréal, QC H3H</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Boustan</td>
+      <td class="hidden-xs">2020 rue Crescent, Montréal, QC H3G 2B8
+        <br>19 Rue Ste-Catherine E, Montréal, QC H2X 1K3</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Brigade Pizzeria Napolitaine</td>
+      <td class="hidden-xs">1428 rue Stanley, Montréal, QC H3A 1P7</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Chatime</td>
+      <td class="hidden-xs">1811 rue Ste-Catherine O, Montréal, QC H3H</td>
+      <td>Free upgrade from small to large BBT with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Chef on Call</td>
+      <td class="hidden-xs">362 rue Sherbrooke O, Montréal, QC H3A 1B5</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Chicha Restaurant</td>
+      <td class="hidden-xs">5100 rue Sherbrooke O, Montréal, QC H4A 1T1</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Desserts ETC.</td>
+      <td class="hidden-xs">1853 rue Ste-Catherine O, Montréal, QC H3H 1M2</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Farrouj Express</td>
+      <td class="hidden-xs">3575 Avenue du Parc #5200, Montréal, QC H2X 3P9</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Lauzon Driving School</td>
+      <td class="hidden-xs">600 rue Jean-Talon E #101, Montréal, QC H2R 3A8</td>
+      <td>$100 off RSEP package with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Hakata Ramen</td>
+      <td class="hidden-xs">1216 rue Stanley, Montréal, QC H3B 2S7</td>
+      <td>Free drink with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Haru-Hana</td>
+      <td class="hidden-xs">912 Boulevard de Maisonneuve E, Montréal, QC H2L 1Z1</td>
+      <td>15% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Kafein</td>
+      <td class="hidden-xs">1429 rue Bishop, Montréal, QC H3G 2E4</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Kinoya</td>
+      <td class="hidden-xs">4250 rue St-Denis, Montréal, QC H2J 2K8</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Kyozon</td>
+      <td class="hidden-xs">1458 rue Crescent, Montréal, QC H3G 2B7</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>L2 Lounge</td>
+      <td class="hidden-xs">71 rue de la Gauchetière O, Montréal, QC H2Z 1C2</td>
+      <td>10% off with MTSA card (Cash Only)</td>
+    </tr>
+    <tr>
+      <td>Le Cristal Chinois</td>
+      <td class="hidden-xs">6F, 998 Boulevard Saint-Laurent, Montréal, QC H2Z 9Y9</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Le Painnamou</td>
+      <td class="hidden-xs">2019 rue Bishop, Montréal, QC H3G 2E8</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Le Showwok</td>
+      <td class="hidden-xs">2081 rue Ste-Catherine O, Montréal, QC H3H 1M6</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Les Saisons de Coree</td>
+      <td class="hidden-xs">1184 rue Bishop, Montréal, QC H3G 2M5</td>
+      <td>10% off orders of $40 or more with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Magic Idea</td>
+      <td class="hidden-xs">1675 Boulevard de Maisonneuve O, Montréal, QC H3H 1J6</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Maison du Nord</td>
+      <td class="hidden-xs">2130 rue Saint Mathieu, Montréal, QC H3H 2J4</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>MBox Karaoke</td>
+      <td class="hidden-xs">486 rue Ste-Catherine O, Montréal, QC H3B 1A6</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Nos Thes</td>
+      <td class="hidden-xs">1609 rue Ste-Catherine O, Montréal, QC H3H 1L8</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Pannizza</td>
+      <td class="hidden-xs">914 rue Sherbrooke O, Montréal, QC H3A 1G3</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Restaurant Ethan</td>
+      <td class="hidden-xs">72 rue de la Gauchetière O, Montréal, QC H2Z 1B9</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Runway Beauty Bar</td>
+      <td class="hidden-xs">677 Ste-Catherine O, #M24A, Montréal, QC H3B 5K4</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Sheng Tang Supermarket</td>
+      <td class="hidden-xs">1425 rue du Fort, Montréal, QC H3H 2C2</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Simplement D Liche</td>
+      <td class="hidden-xs">3964 rue St Denis, Montréal, QC H2W 2M2</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Spicy Noodle</td>
+      <td class="hidden-xs">3575 Avenue du Parc, Montréal, QC H2X 3P9</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+    <tr>
+      <td>Tapioca Thé</td>
+      <td class="hidden-xs">1672 Boulevard de Maisonneuve O, Montréal, QC H3H 1J6</td>
+      <td>10% off with MTSA card (Cash Only)</td>
+    </tr>
+    <tr>
+      <td>Tianxia</td>
+      <td class="hidden-xs">2065 rue Bishop, Montréal, QC H3G 2E8</td>
+      <td>10% off with MTSA card</td>
+    </tr>
+  </table>
+
+
+    <!-- PROJECT DETAILS WILL BE LOADED HERE -->
+    <div id="loaded-content2"></div>
+
+    <div class="row buttons hidden-xs hidden-sm">
+      <a id="back-button2" class="yellow-btn" href="#">Go Back</a>
+    </div>
+  </div>
+  <!-- / END CONTAINER -->
+</section>
