--- a/src/app/news-banner/news-banner.component.html
+++ b/src/app/news-banner/news-banner.component.html
@@ -9,7 +9,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="../../assets/img/intro-banner.png" alt="Chania">
+      <!--<img src="../../assets/img/intro-banner.png" alt="Chania">-->
       <div class="carousel-caption">
         <h3>Los Angeles</h3>
         <p>LA is always so much fun!</p>
@@ -17,7 +17,7 @@
     </div>
 
     <div class="item">
-      <img src="../../assets/img/intro-banner.png" alt="Chicago">
+      <!--<img src="../../assets/img/intro-banner.png" alt="Chicago">-->
       <div class="carousel-caption">
         <h3>Chicago</h3>
         <p>Thank you, Chicago!</p>
@@ -25,7 +25,7 @@
     </div>
 
     <div class="item">
-      <img src="../../assets/img/intro-banner.png" alt="New York">
+      <!--<img src="../../assets/img/intro-banner.png" alt="New York">-->
       <div class="carousel-caption">
         <h3>New York</h3>
         <p>We love the Big Apple!</p>
