started google maps implementation, incomplete

--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -2,6 +2,10 @@
 <section class="sponsors" id="sponsors">
   <div class="container color-overlay">
 
+    <agm-map [latitude]="lat" [longitude]="lng">
+      <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+    </agm-map>
+
     <!-- SECTION HEADER -->
     <div class="section-header">
 
