--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,27 +1,3 @@
-<!--<section id="portfolio">-->
-  <!--<div class="container">-->
-    <!--<div class="row">-->
-      <!--<div class="col-lg-12 text-center">-->
-        <!--<h2>Events</h2>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row">-->
-      <!--<div class="col-sm-4 portfolio-item" *ngFor="let events of allEvents">-->
-        <!--<a href="#portfolioModal1" (click)=updateModalEvent(events) class="portfolio-link" data-toggle="modal">-->
-          <!--<div class="caption">-->
-            <!--<p> {{ events.Name }}</p>-->
-            <!--<div class="caption-content">-->
-              <!--<i class="fa fa-search-plus fa-3x"></i>-->
-            <!--</div>-->
-          <!--</div>-->
-          <!--<img src="../../assets/img/execs/Tiffany3.jpg"  class="img-responsive" alt="Cabin">-->
-        <!--</a>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</section>-->
-
-
 <section id="portfolio">
   <div class="container content-section text-center">
     <div class="row">
@@ -32,10 +8,7 @@
   <div class="gallery">
     <ul>
       <li class="col-md-3" *ngFor="let event of allEvents">
-        <a href="#portfolioModal1" (click)=updateModalEvent(events)>
-          <div class="caption">
-            <p> {{ event.Name }}</p>
-          </div>
+        <a href="#portfolioModal1" (click)=updateModalEvent(event) class="portfolio-link" data-toggle="modal">
           <img src="../../assets/img/execs/Annie.jpg" alt="">
         </a>
       </li>
