--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -2,17 +2,17 @@
 <section class="sponsors" id="sponsors">
   <div class="container color-overlay">
 
+    <div class="col-lg-12 text-center">
+      <h2>Sponsors</h2>
+      <hr class="star-primary">
+    </div>
+
+
     <agm-map [latitude]="lat" [longitude]="lng">
       <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
     </agm-map>
 
-    <!-- SECTION HEADER -->
-    <div class="section-header">
 
-      <!-- SECTION TITLE -->
-      <h2 class="dark-text">Sponsors</h2>
-    </div>
-    <!-- / END SECTION HEADER -->
     <div id="discount-list">
       <div id="map"></div>
       <div class="row buttons hidden-xs hidden-sm">
