--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -1,54 +1,3 @@
-/*#portfolio .portfolio-item {*/
-  /*margin: 0 0 2px;*/
-  /*right: 0;*/
-/*}*/
-/*#portfolio .portfolio-item .portfolio-link {*/
-  /*display: block;*/
-  /*position: relative;*/
-  /*min-wdith: 215px;*/
-  /*max-width: 300px;*/
-  /*margin: 0 auto;*/
-/*}*/
-/*#portfolio .portfolio-item .portfolio-link .caption {*/
-  /*background: rgba(50, 50, 50, 0.7);*/
-  /*position: absolute;*/
-  /*width: 100%;*/
-  /*height: 100%;*/
-  /*opacity: 0;*/
-  /*transition: all ease 0.5s;*/
-  /*-webkit-transition: all ease 0.5s;*/
-  /*-moz-transition: all ease 0.5s;*/
-/*}*/
-/*#portfolio .portfolio-item .portfolio-link .caption:hover {*/
-  /*opacity: 1;*/
-/*}*/
-/*#portfolio .portfolio-item .portfolio-link .caption .caption-content {*/
-  /*position: absolute;*/
-  /*width: 100%;*/
-  /*height: 20px;*/
-  /*font-size: 20px;*/
-  /*text-align: center;*/
-  /*top: 50%;*/
-  /*margin-top: -12px;*/
-  /*color: white;*/
-/*}*/
-/*#portfolio .portfolio-item .portfolio-link .caption .caption-content i {*/
-  /*margin-top: -12px;*/
-/*}*/
-/*#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,*/
-/*#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {*/
-  /*margin: 0;*/
-/*}*/
-/*#portfolio * {*/
-  /*z-index: 2;*/
-/*}*/
-/*@media (min-width: 767px) {*/
-  /*#portfolio .portfolio-item {*/
-    /*margin: 0 0 30px;*/
-  /*}*/
-/*}*/
-
-
 .portfolio-modal .modal-content {
   border-radius: 0;
   background-clip: border-box;
@@ -132,7 +81,6 @@
   padding: 25px;
 }
 
-
 .gallery ul {
   padding:0;
   margin:0;
@@ -146,6 +94,7 @@
 .gallery ul li {
   margin:0;
   max-width: 23%;
+  min-width: 250px;
   position:relative;
   list-style:none;
   float:left;
@@ -203,66 +152,38 @@ section {
   color:#333;
   overflow:hidden;
 }
-.done {
-  display:none;
+#portfolio input{
+  display: inline-block;
+  position:relative;
+  float:top;
+  border:0px;
+  border-bottom:2px solid #333;
+  width:100%;
+  background-color:transparent;
+  padding:20px 0;
+  text-transform:uppercase;
+  letter-spacing:2px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right:auto;
+
+}
+#portfolio input#submit {
+  width:auto;
+  border:2px solid;
+  padding:10px 20px;
+  display:inline-block;
+}
+#portfolio input#submit:hover {
+  background-color:#333;
+  color:#fff;
+  border:2px solid #333;
+}
+#portfolio input:focus,.portfolio input:active{
+  border-top:0px;
+  border-bottom:2px solid lightseagreen;
+  outline:0;
+  outline: none;
 }
 
-.portfolio-modal .modal-content {
-  border-radius: 0;
-  background-clip: border-box;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border: none;
-  min-height: 100%;
-  padding: 100px 0;
-  text-align: center;
-}
-.portfolio-modal .modal-content h2 {
-  margin: 0;
-  font-size: 3em;
-}
-.portfolio-modal .modal-content img {
-  margin-bottom: 30px;
-}
-.portfolio-modal .modal-content .item-details {
-  margin: 30px 0;
-}
-.portfolio-modal .close-modal {
-  position: absolute;
-  width: 75px;
-  height: 75px;
-  background-color: transparent;
-  top: 25px;
-  right: 25px;
-  cursor: pointer;
-}
-.portfolio-modal .close-modal:hover {
-  opacity: 0.3;
-}
-.portfolio-modal .close-modal .lr {
-  height: 75px;
-  width: 1px;
-  margin-left: 35px;
-  background-color: #2C3E50;
-  transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  /* IE 9 */
-  -webkit-transform: rotate(45deg);
-  /* Safari and Chrome */
-  z-index: 1051;
-}
-.portfolio-modal .close-modal .lr .rl {
-  height: 75px;
-  width: 1px;
-  background-color: #2C3E50;
-  transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  /* IE 9 */
-  -webkit-transform: rotate(90deg);
-  /* Safari and Chrome */
-  z-index: 1052;
-}
-.portfolio-modal .modal-backdrop {
-  opacity: 0;
-  display: none;
-}
