--- a/src/app/news-banner/news-banner.component.html
+++ b/src/app/news-banner/news-banner.component.html
@@ -7,31 +7,33 @@
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <!--<img src="../../assets/img/intro-banner.png" alt="Chania">-->
-      <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
+  <a href="../../index.html">
+    <div class="carousel-inner">
+      <div class="item active">
+        <!--<img src="../../assets/img/intro-banner.png" alt="Chania">-->
+        <div class="carousel-caption">
+          <h3>Los Angeles</h3>
+          <p>LA is always so much fun!</p>
+        </div>
       </div>
-    </div>
 
-    <div class="item">
-      <!--<img src="../../assets/img/intro-banner.png" alt="Chicago">-->
-      <div class="carousel-caption">
-        <h3>Chicago</h3>
-        <p>Thank you, Chicago!</p>
+      <div class="item">
+        <!--<img src="../../assets/img/intro-banner.png" alt="Chicago">-->
+        <div class="carousel-caption">
+          <h3>Chicago</h3>
+          <p>Thank you, Chicago!</p>
+        </div>
       </div>
-    </div>
 
-    <div class="item">
-      <!--<img src="../../assets/img/intro-banner.png" alt="New York">-->
-      <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>We love the Big Apple!</p>
+      <div class="item">
+        <!--<img src="../../assets/img/intro-banner.png" alt="New York">-->
+        <div class="carousel-caption">
+          <h3>New York</h3>
+          <p>We love the Big Apple!</p>
+        </div>
       </div>
     </div>
-  </div>
+  </a>
 
   <!-- Left and right controls -->
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
