--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -8,10 +8,7 @@
     </div>
 
 
-    <agm-map [latitude]="lat" [longitude]="lng">
-      <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-    </agm-map>
-
+    <ngui-map center="Montreal, Canada"></ngui-map>
 
     <div id="discount-list">
       <div id="map"></div>
