added anchor ref from menu and smooth page scrolling feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,17 @@
 
 <app-welcome-page></app-welcome-page>
 
-<app-about-us></app-about-us>
+<app-about-us id="about-us"></app-about-us>
 
-<app-news-banner></app-news-banner>
+<app-news-banner id="news-banner"></app-news-banner>
 
-<app-events></app-events>
+<app-events id="events"></app-events>
 
-<app-execs></app-execs>
+<app-execs id="execs"></app-execs>
 
-<app-sponsors></app-sponsors>
+<app-sponsors id="sponsors"></app-sponsors>
 
-<app-contact-us></app-contact-us>
+<app-contact-us id="contact-us"></app-contact-us>
 
 <app-footer></app-footer>
 
