--- a/src/app/menu.component.html
+++ b/src/app/menu.component.html
@@ -11,16 +11,22 @@
     <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="index.html">Home</a>
+          <a href="#abous-us" class="page-scroll">About Us</a>
         </li>
         <li>
-          <a href="portfolio-item.html">Single Project</a>
+          <a href="#news-banner" class="page-scroll">What's new</a>
         </li>
         <li>
-          <a href="page-sample.html">Page Sample</a>
+          <a href="#events" class="page-scroll">Events</a>
         </li>
         <li>
-          <a href="contact.html">Hire me</a>
+          <a href="#execs" class="page-scroll">Team</a>
+        </li>
+        <li>
+          <a href="#sponsors" class="page-scroll">Sponsors</a>
+        </li>
+        <li>
+          <a href="#contact-us" class="page-scroll">Contact Us</a>
         </li>
       </ul>
     </div>
