--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -7,7 +7,7 @@
           <p class="intro-text">
             <i class="fa fa-cutlery" aria-hidden="true"></i>Eat  <i class="fa fa-smile-o" aria-hidden="true"></i>Laugh  <i class="fa fa-heart" aria-hidden="true"></i>Love
           </p>
-          <a href="#about" class="btn btn-circle page-scroll">
+          <a href="#about-us" class="btn btn-circle page-scroll">
             <i class="fa fa-angle-double-down animated"></i>
           </a>
         </div>
