--- a/src/app/menu.component.html
+++ b/src/app/menu.component.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#abous-us" class="page-scroll">About Us</a>
+          <a href="#about-us" class="page-scroll">About Us</a>
         </li>
         <li>
           <a href="#news-banner" class="page-scroll">What's new</a>
