--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -5,7 +5,7 @@
       <h2>Sponsors</h2>
       <hr class="star-primary">
     </div>
-    <div class="map">
+    <div class="map col-lg-12">
       <ngui-map
         zoom="13"
         center="845 Sherbrook West, Canada">
