--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -1,13 +1,12 @@
 .about-us {
   background: #fff;
   color: #272727;
-  padding-bottom: 100px;
 }
 
 .about-us .big-intro {
   text-align: right;
   font-weight: 300;
-  font-size: 60px;
+  font-size: 3.7em;
   line-height: normal;
   margin-top: -15px;
 }
@@ -15,6 +14,7 @@
 .about-us p {
   text-align: left;
   color: #939393;
+  font-size: 1.2em;
 }
 
 .about-us .column {
@@ -67,55 +67,83 @@
 }
 
 
-/*--OUR CLIENTS --*/
-
-.our-clients {
-  background: url(../../assets/img/execs/Tiffany3.jpg) repeat-x center;
-  margin-bottom: 40px;
+@-webkit-keyframes
+load { 0% {
+  stroke-dashoffset:0
+}
+}
+@-moz-keyframes
+load { 0% {
+  stroke-dashoffset:0
+}
+}
+@keyframes
+load { 0% {
+  stroke-dashoffset:0
+}
 }
 
-.our-clients .section-footer-title {
-  background: #272727;
-  padding: 0 15px;
-  color: #FFF;
-}
+/* Container */
 
-.our-clients h5 {
-  font-weight: 700;
-}
-
-.client-list {
-  padding-top: 5px;
-  margin-bottom: -17px;
-}
-
-.client-list ul li {
-  vertical-align: middle;
+.progress {
+  position: relative;
   display: inline-block;
-  margin-right: 24px;
-  padding-bottom: 15px;
-  text-transform: uppercase;
+  padding: 0;
+  text-align: center;
 }
 
-.client-list ul li img {
-  max-width: 130px;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-  filter: alpha(opacity=80);
-  opacity: 0.8;
-  -webkit-transition: all ease .55s;
-  transition: all ease .55s;
+/* Item */
+
+.progress>li {
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  color: #93A2AC;
+  font-family: Lato;
+  font-weight: 100;
+  margin: 2rem;
 }
 
-.client-list ul li img:hover {
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: alpha(opacity=100);
-  opacity: 1;
+.progress>li:before {
+  content: attr(data-name);
+  position: absolute;
+  width: 100%;
+  bottom: -2rem;
+  font-weight: 400;
 }
 
-.client-list ul li:last-child {
-  margin-right: 0;
+.progress>li:after {
+  content: attr(data-percent);
+  position: absolute;
+  width: 100%;
+  top: 3.7rem;
+  left: 0;
+  font-size: 2rem;
+  text-align: center;
 }
 
-.client-list ul li i {
-  margin-right: 8px;
+.progress svg {
+  width: 10rem;
+  height: 10rem;
+}
+
+.progress svg:nth-child(2) {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+}
+
+.progress svg:nth-child(2) path {
+  fill: none;
+  stroke-width: 25;
+  stroke-dasharray: 629;
+  stroke: rgba(255, 255, 255, 0.9);
+  -webkit-animation: load 10s;
+  -moz-animation: load 10s;
+  -o-animation: load 10s;
+  animation: load 10s;
 }
