--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -5,7 +5,10 @@
     <div class="section-header">
 
       <!-- SECTION TITLE -->
-      <h2 class="white-text">About US</h2>
+      <div class="col-lg-12 text-center">
+        <h2>About Us</h2>
+        <hr class="star-primary">
+      </div>
 
     </div>
     <!-- / END SECTION HEADER -->
@@ -31,6 +34,27 @@
 
       <!-- COLUMN 1 - SKILSS-->
       <div class="col-lg-4 col-md-4 column">
+        <div class="item html">
+          <h2>HTML</h2>
+
+        </div>
+
+        <ul class="progress">
+          <!--  Item  -->
+          <li data-name="SVG Skill" data-percent="13%"> <svg viewBox="-10 -10 220 220">
+            <g fill="none" stroke-width="3" transform="translate(100,100)">
+              <path d="M 0,-100 A 100,100 0 0,1 86.6,-50" stroke="url(#cl1)"/>
+              <path d="M 86.6,-50 A 100,100 0 0,1 86.6,50" stroke="url(#cl2)"/>
+              <path d="M 86.6,50 A 100,100 0 0,1 0,100" stroke="url(#cl3)"/>
+              <path d="M 0,100 A 100,100 0 0,1 -86.6,50" stroke="url(#cl4)"/>
+              <path d="M -86.6,50 A 100,100 0 0,1 -86.6,-50" stroke="url(#cl5)"/>
+              <path d="M -86.6,-50 A 100,100 0 0,1 0,-100" stroke="url(#cl6)"/>
+            </g>
+          </svg> <svg viewBox="-10 -10 220 220">
+            <path d="M200,100 C200,44.771525 155.228475,0 100,0 C44.771525,0 0,44.771525 0,100 C0,155.228475 44.771525,200 100,200 C155.228475,200 200,155.228475 200,100 Z" stroke-dashoffset="81"></path>
+          </svg> </li>
+          </ul>
+
         <ul class="skills wow fadeInRight animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s">
 
           <!-- SKILL ONE -->
