--- a/src/app/news-banner/news-banner.component.html
+++ b/src/app/news-banner/news-banner.component.html
@@ -7,33 +7,29 @@
   </ol>
 
   <!-- Wrapper for slides -->
-  <a href="../../index.html">
-    <div class="carousel-inner">
-      <div class="item active">
-        <!--<img src="../../assets/img/intro-banner.png" alt="Chania">-->
-        <div class="carousel-caption">
-          <h3>Los Angeles</h3>
-          <p>LA is always so much fun!</p>
+      <div class="carousel-inner">
+        <div class="item active" style="background-image: url('../../assets/img/sponsors/{{sponsor.Name}}.jpg');" *ngFor="let sponsor of sponsorOfTheWeek">
+          <a href="{{sponsor.URL}}" >
+            <img src="../../assets/img/sponsors/{{sponsor.Name}}.jpg" alt="Chania">
+            <div class="carousel-caption">
+              <h3>{{sponsor.Name}}</h3>
+              <p>Get a {{sponsor.DiscountType}} with the MTSA card</p>
+              <p>{{sponsor.Address}}</p>
+            </div>
+          </a>
         </div>
-      </div>
 
-      <div class="item">
-        <!--<img src="../../assets/img/intro-banner.png" alt="Chicago">-->
-        <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago!</p>
+        <div class="item" style="background-image: url('../../assets/img/events/{{event.Name}}.jpg');" *ngFor="let event of upcomingEvents">
+          <a href="{{event.EventURL}}" >
+            <img src="../../assets/img/events/{{event.Name}}.jpg" alt="Chania">
+            <div class="carousel-caption">
+              <h3>{{event.Name}}</h3>
+              <p>When: {{event.Date}} - {{event.Time}}</p>
+              <p>Where: {{ event.Location }}</p>
+            </div>
+          </a>
         </div>
-      </div>
-
-      <div class="item">
-        <!--<img src="../../assets/img/intro-banner.png" alt="New York">-->
-        <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>We love the Big Apple!</p>
-        </div>
-      </div>
     </div>
-  </a>
 
   <!-- Left and right controls -->
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
