--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,8 +1,9 @@
 footer {
-  padding:40px 0;
+  padding:10px 0;
   z-index:1;
   position:relative;
   clear:both;
+  background-color: rgba(0, 0, 0, 0.6)
 }
 footer p {
   margin:0;
@@ -12,4 +13,5 @@ footer p.credits {
   text-transform:uppercase;
   font-size:13px;
   letter-spacing:3px;
+  color:white;
 }
