--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -9,13 +9,13 @@
     <ul>
       <li class="col-md-3" *ngFor="let event of thumbnailEventList">
         <a href="#portfolioModal1" (click)=updateModalEvent(event) class="portfolio-link" data-toggle="modal">
-          <img src="../../assets/img/execs/Annie.jpg" alt="">
+           <img src="../../assets/img/events/{{event.Name}}.jpg">
         </a>
       </li>
     </ul>
   </div>
 
-  <input type="submit" id="submit" class="clearfix btn" value="Send">
+  <input type="submit" id="submit" class="clearfix btn" value="See more">
 </section>
 
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
