--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,4 +1,4 @@
-<div class="intro">
+<section class="intro">
   <div class="intro-body">
     <div class="container">
       <div class="row">
@@ -14,4 +14,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
