--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,21 @@
+html {
+  width:100%;
+  height:100%;
+  background-image: url('./assets/img/intro-banner.png');
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow-y: scroll;
+}
+
+
 body {
   width:100%;
   height:100%;
   color:#fff;
-  background-color:#000;
   font-weight:300;
 }
-html {
-  width:100%;
-  height:100%;
-}
+
 h1,h2,h3,h4,h5,h6 {
   margin:0 0 35px;
   text-transform:uppercase;
