--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,12 @@
 <footer>
   <div class="container text-center">
+    <div class="icon">
+      <ul>
+        <li><a href="https://www.facebook.com/mcgill.mtsa " target="_blank "><i class="fa fa-facebook fa-2x"></i></a></li>
+        <li><a href="https://instagram.com/mtsalovesyou/ " target="_blank "><i class="fa fa-instagram fa-2x"></i></a></li>
+        <li><a href="https://www.youtube.com/user/MTSAvids " target="_blank "><i class="fa fa-youtube-play fa-2x"></i></a></li>
+      </ul>
+    </div>
     <p class="credits">
       MTSA Website 2017 - 2018<br/>
       by Tiffany Wang
