--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,11 @@ body {
   font-weight:300;
 }
 
+
+body.modal-open{
+  overflow: visible;
+}
+
 h1,h2,h3,h4,h5,h6 {
   margin:0 0 35px;
   text-transform:uppercase;
