--- a/src/app/events/events.component.css
+++ b/src/app/events/events.component.css
@@ -8,6 +8,7 @@
   padding: 100px 0;
   text-align: center;
 }
+
 .portfolio-modal .modal-content h2 {
   margin: 0;
   font-size: 3em;
@@ -153,7 +154,7 @@ section {
   color:#333;
   overflow:hidden;
 }
-#portfolio input{
+#portfolio button{
   display: inline-block;
   position:relative;
   float:top;
@@ -169,20 +170,20 @@ section {
   margin-right:auto;
 
 }
-#portfolio input#submit {
+#portfolio button#submit {
   width:auto;
   border:2px solid;
   padding:10px 20px;
   display:inline-block;
 }
-#portfolio input#submit:hover {
+#portfolio button#submit:hover {
   background-color:#333;
   color:#fff;
   border:2px solid #333;
 }
-#portfolio input:focus,.portfolio input:active{
+#portfolio button:focus,.portfolio button:active{
   border-top:0px;
-  border-bottom:2px solid lightseagreen;
+  border-bottom:2px solid #323232;
   outline:0;
   outline: none;
 }
