--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -15,7 +15,9 @@
     </ul>
   </div>
 
-  <input type="submit" id="submit" class="clearfix btn" value="See more">
+  <div style="width: 100%;">
+    <button type="button" id="submit" class="btn" data-toggle="full-events-modal">See more</button>
+  </div>
 </section>
 
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
