--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -15,3 +15,18 @@ footer p.credits {
   letter-spacing:3px;
   color:white;
 }
+
+footer .icon ul{
+  margin:10px;
+  -webkit-padding-start: 0;
+}
+
+footer .icon li{
+  display:inline;
+  margin: 0 25px;
+}
+
+
+footer .icon li i{
+  color: white;
+}
