added alternative image for inexistant exec image

--- a/src/app/execs/execs.component.html
+++ b/src/app/execs/execs.component.html
@@ -7,7 +7,7 @@
         <div class="serve-agileinfo" *ngFor="let exec of allExecs">
           <div class="exec_portfolio">
           <figure class="effect-julia">
-            <img src="../../assets/img/execs/{{exec.imgUrl}}" alt="img21"/>
+            <img src="../../assets/img/execs/{{exec.imgUrl}}" alt="../../assets/img/execs/alt.jpg"/>
             <figcaption>
               <div>
                 <p> First Fact </p> <br>
