tried to change the dates in the events but failed

--- a/src/app/news-banner/news-banner.component.html
+++ b/src/app/news-banner/news-banner.component.html
@@ -24,7 +24,7 @@
             <img src="../../assets/img/events/{{event.Name}}.jpg" alt="Chania">
             <div class="carousel-caption">
               <h3>{{event.Name}}</h3>
-              <p>When: {{event.Date}} - {{event.Time}}</p>
+              <p>When: {{event.Start}} TO {{event.End}} </p>
               <p>Where: {{ event.Location }}</p>
             </div>
           </a>
